<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_recipe_to_widget"
        android:title="@string/add_to_widget_menu_item"
        app:showAsAction="always" />
</menu>